[GTK] webkit_settings_set_enable_plugins deprecation warning breaks unit tests https://bugs.webkit.org/show_bug.cgi?id=220620

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-02-03
Reviewed by Carlos Garcia Campos.

Don't print a warning when calling webkit_settings_set_enable_plugins() to disable plugins.
We'll still print a warning if attempting to enable plugins, or if checking whether plugins
are enabled.

* UIProcess/API/glib/WebKitSettings.cpp:
(webkit_settings_get_enable_plugins):
(webkit_settings_set_enable_plugins):

Canonical link: https://commits.webkit.org/233670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272342 268f45cc-cd09-0410-ab3c-d52691b4dbfc